--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   height: 100vh;
   font-family: "nunito", sans-serif;
-  background: linear-gradient(to right, #fb7ba2, #fce043);
+  background: linear-gradient(to bottom right, #fb7ba2, #fce043);
 }
 .card {
   display: grid;
@@ -21,7 +21,7 @@ body {
   background: rgba(255, 255, 255, 0.5);
   padding: 1rem;
 }
-.input {
+.header-container {
   grid-column-start: span 4;
   grid-row-start: span 2;
   display: flex;
@@ -29,8 +29,53 @@ body {
   padding: 0.5rem;
   border: none;
 }
-.input-new {
+.form {
+  display: flex;
+  justify-content: space-between;
+}
+.input {
+  padding: 0.7rem;
+  width: 90%;
   border: none;
+  outline: none;
+}
+#add-button {
+  border: none;
+  background: royalblue;
+  color: white;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+}
+.delete-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: transparent;
+  border: none;
+  padding: 0.5rem 1rem;
+  color: red;
+}
+.delete-btn:hover {
+  color: rgb(255, 255, 255);
+  background: rgba(253, 0, 0, 0.9);
+  cursor: pointer;
+}
+.check-btn {
+  position: absolute;
+  margin-left: auto;
+  background: transparent;
+  border: none;
+  padding: 0.5rem 1rem;
+  top: 0;
+  bottom: 0;
+  right: 2.6rem;
+}
+.check-btn:hover {
+  background: green;
+  color: white;
+  cursor: pointer;
 }
 .errMsg {
   color: red;
@@ -43,17 +88,10 @@ body {
 }
 .header {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   margin-bottom: 1rem;
 }
-#add-button {
-  border: none;
-  background: royalblue;
-  color: white;
-  cursor: pointer;
-  padding: 0 2rem;
-}
+
 #add-button:hover {
   background: rgb(91, 128, 236);
 }
@@ -67,24 +105,10 @@ ul {
   border-left: 5px solid royalblue;
   position: relative;
 }
-li:hover {
+.list-class:hover {
   background: rgba(245, 245, 245, 0.9);
 }
 p {
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
-}
-.input-new {
-  padding: 0.5rem;
-  margin: 0 0.2rem;
-}
-.delete-btn {
-  position: absolute;
-  right: 1rem;
-  background: transparent;
-  border: none;
-}
-.delete-btn:hover {
-  color: red;
-  cursor: pointer;
 }
