--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,11 @@ body {
   background: rgba(253, 0, 0, 0.9);
   cursor: pointer;
 }
+.del-fall {
+  transform: translateY(8rem) rotateZ(20deg);
+  opacity: 0;
+  transition: all 0.5s ease;
+}
 .check-btn {
   position: absolute;
   margin-left: auto;
@@ -103,7 +108,7 @@ ul {
 }
 .list-container {
   position: relative;
-  background: rgba(245, 245, 245, 0.5);
+  background: rgba(245, 245, 245, 0.7);
   border-left: 5px solid royalblue;
   margin-bottom: 0.3rem;
   padding: 0.5rem;
