--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ body {
   margin: 2rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 1rem;
+  position: relative;
   min-height: 500px;
   min-width: 400px;
   padding: 1rem;
@@ -37,7 +38,7 @@ body {
   justify-content: space-between;
 }
 .header .heading {
-  font-style: thin;
+  font-size: 1.5rem;
 }
 .form {
   display: flex;
@@ -56,6 +57,7 @@ body {
   cursor: pointer;
   font-size: 1rem;
   padding: 1rem 1.4rem;
+  transform: none;
 }
 #add-button:hover {
   background: rgb(91, 127, 235);
@@ -94,7 +96,7 @@ body {
 }
 .list {
   padding: 0.5rem;
-  margin-top: 1rem;
+  margin-bottom: 3rem;
 }
 .header {
   display: flex;
@@ -135,7 +137,11 @@ ul {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0.5rem 0.4rem;
+  padding: 1rem;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
 }
 .task-number {
   margin-top: 1rem;
