--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ body {
   width: 50%;
   margin: 3rem 0;
 }
-.delete-btn {
+#delete-btn {
   position: absolute;
   right: 0;
   top: 0;
@@ -105,7 +105,7 @@ body {
   opacity: 0;
   transition: all 0.5s ease;
 }
-.check-btn {
+#check-btn {
   position: absolute;
   margin-left: auto;
   background: transparent;
