--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,16 @@
   box-sizing: border-box;
   margin: 0%;
   padding: 0%;
-  font-family: "Fira Sans", sans-serif;
 }
 .main-container {
+  font-family: "Fira Sans", sans-serif;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: column;
   align-items: center;
   height: 100vh;
 }
-.header-container {
+.header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -26,6 +26,8 @@
 }
 #task-number {
   font-size: 0.8rem;
+  color: royalblue;
+  font-size: 1.5rem;
 }
 .clear-btn {
   padding: 0.5rem 1rem;
@@ -43,10 +45,8 @@
   flex-direction: column;
   gap: 1rem;
   position: sticky;
-  top: 1rem;
   z-index: 2;
   width: 50%;
-  margin-top: 9rem;
 }
 .main-heading {
   display: flex;
@@ -87,7 +87,7 @@
   display: flex;
   flex-direction: column;
   width: 50%;
-  margin: 3rem 0;
+  margin-top: 3rem;
 }
 #delete-btn {
   position: absolute;
@@ -99,7 +99,7 @@
   padding: 0.5rem 1rem;
   color: red;
   cursor: pointer;
-  overflow: hidden;
+  font-size: 1.5rem;
 }
 .del-fall {
   transform: translateY(8rem) rotateZ(20deg);
@@ -117,6 +117,7 @@
   right: 2.6rem;
   color: green;
   cursor: pointer;
+  font-size: 1.5rem;
 }
 .warning {
   color: red;
@@ -148,19 +149,10 @@ ul {
 .empty {
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
-  margin-top: 5rem;
 }
 .fade {
   opacity: 0;
   transition: all 0.1s ease;
-}
-.footer {
-  position: relative;
-}
-.footer-text {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
 }
 
 @media (max-width: 900px) {
