--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 .main-container {
   font-family: "Fira Sans", sans-serif;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-direction: column;
   align-items: center;
   height: 100vh;
@@ -45,8 +45,10 @@
   flex-direction: column;
   gap: 1rem;
   position: sticky;
+  top: 1rem;
   z-index: 2;
   width: 50%;
+  margin-top: 9rem;
 }
 .main-heading {
   display: flex;
@@ -67,7 +69,7 @@
   border-top-left-radius: 9px;
 }
 .input:focus {
-  border: 2 px solid royalblue;
+  outline: 1px solid royalblue;
 }
 #add-button {
   border: none;
@@ -149,6 +151,7 @@ ul {
 .empty {
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
+  margin-top: 5rem;
 }
 .fade {
   opacity: 0;
