--- a/css/style.css
+++ b/css/style.css
@@ -26,19 +26,19 @@
 }
 #task-number {
   font-size: 0.8rem;
-  color: royalblue;
+  color: #17a2b8;
   font-size: 1.5rem;
 }
 .clear-btn {
   padding: 0.5rem 1rem;
-  background: royalblue;
+  background: #17a2b8;
   color: white;
   border: none;
   cursor: pointer;
   border-radius: 4px;
 }
 .clear-btn:hover {
-  background: rgb(91, 127, 235);
+  background: #138496;
 }
 .main-header-container {
   display: flex;
@@ -70,7 +70,7 @@
 }
 #add-button {
   border: none;
-  background: royalblue;
+  background: #17a2b8;
   color: white;
   cursor: pointer;
   font-size: 1rem;
@@ -80,7 +80,7 @@
   border-top-right-radius: 9px;
 }
 #add-button:hover {
-  background: rgb(91, 127, 235);
+  background: #138496;
 }
 .list-container {
   display: flex;
@@ -96,7 +96,7 @@
   background: transparent;
   border: none;
   padding: 0.5rem 1rem;
-  color: red;
+  color: #dc143c;
   cursor: pointer;
   font-size: 1.5rem;
 }
@@ -114,7 +114,7 @@
   top: 0;
   bottom: 0;
   right: 2.6rem;
-  color: green;
+  color: #04aa6d;
   cursor: pointer;
   font-size: 1.5rem;
 }
@@ -125,7 +125,7 @@
 .list-div {
   position: relative;
   background: white;
-  border-left: 5px solid royalblue;
+  border-left: 5px solid #17a2b8;
   margin-bottom: 0.3rem;
   padding: 1rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
