--- a/css/style.css
+++ b/css/style.css
@@ -6,23 +6,30 @@
   padding: 0%;
 }
 .main-container {
-  font-family: "Baloo Tammudu 2", cursive;
+  font-family: "Roboto", sans-serif;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
   align-items: center;
   height: 100vh;
 }
+#header {
+  width: 100vw;
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background: linear-gradient(to right bottom, #00aaff, #00ff6c);
+  padding-bottom: 2rem;
+  margin-bottom: 1rem;
+}
 .header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 1rem;
-  position: sticky;
-  top: 0;
-  right: 0;
   width: 100%;
-  z-index: 2;
 }
 #task-number {
   font-size: 0.8rem;
@@ -30,73 +37,75 @@
   font-size: 1.5rem;
 }
 .clear-btn {
-  padding: 0.5rem 1rem;
-  background: #17a2b8;
+  padding: 1rem;
+  background: #dc143c;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   color: white;
   border: none;
   cursor: pointer;
-  border-radius: 4px;
   transition-duration: 0.4s;
+  position: fixed;
+  left: 1rem;
+  bottom: 1rem;
+  border-radius: 50%;
+  z-index: 3;
 }
 .clear-btn:hover {
-  background: #138496;
+  background: #b60326;
 }
 .main-header-container {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  position: sticky;
-  top: 1rem;
-  z-index: 2;
   width: 50%;
-  margin-top: 9rem;
 }
 .main-heading {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-bottom: 1rem;
+  align-items: center;
   animation-name: main-heading-animation;
   animation-duration: 4s;
+  color: white;
 }
 @keyframes main-heading-animation {
   0% {
-    color: #17a2b8;
+    color: #ec9f05;
     left: 0;
   }
   50% {
-    color: #dc143c;
+    color: #ff4e00;
   }
   100% {
-    color: #555555;
+    color: #00aaff;
   }
+}
+.date-time {
+  font-size: 0.8rem;
 }
 .form {
   display: flex;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border-radius: 9px;
 }
 .input {
   padding: 1rem;
   width: 100%;
   border: none;
   outline: none;
-  border-bottom-left-radius: 9px;
-  border-top-left-radius: 9px;
+  opacity: 0.5;
 }
 #add-button {
   border: none;
-  background: #17a2b8;
+  background: transparent;
   color: white;
   cursor: pointer;
   font-size: 1rem;
   padding: 1rem 1.4rem;
   transform: none;
-  border-bottom-right-radius: 9px;
-  border-top-right-radius: 9px;
   transition-duration: 0.4s;
 }
 #add-button:hover {
-  background: #138496;
+  background: #04aa6d;
 }
 #add-button:focus {
   outline: none;
@@ -105,7 +114,6 @@
   display: flex;
   flex-direction: column;
   width: 50%;
-  margin-top: 3rem;
 }
 #delete-btn {
   position: absolute;
@@ -160,7 +168,7 @@
 }
 ul {
   list-style: none;
-  font-family: "Nunito", sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 }
 .checked-list {
   text-decoration: line-through;
@@ -183,7 +191,6 @@ ul {
 @media (max-width: 900px) {
   .main-header-container {
     width: 70%;
-    margin-top: 3rem;
   }
   .list-container {
     width: 70%;
@@ -192,7 +199,6 @@ ul {
 @media (max-width: 500px) {
   .main-header-container {
     width: 80%;
-    margin-top: 3rem;
   }
   .list-container {
     width: 80%;
@@ -201,7 +207,6 @@ ul {
 @media (max-width: 450px) {
   .main-header-container {
     width: 90%;
-    margin-top: 3rem;
   }
   .list-container {
     width: 90%;
