--- a/css/style.css
+++ b/css/style.css
@@ -14,16 +14,6 @@
   height: 100vh;
   position: relative;
 }
-#header {
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  background: linear-gradient(to right bottom, #00aaff, #00ff6c);
-  padding-bottom: 2rem;
-  margin-bottom: 1rem;
-}
 .header {
   display: flex;
   flex-direction: row;
@@ -66,7 +56,6 @@
   align-items: center;
   animation-name: main-heading-animation;
   animation-duration: 4s;
-  color: white;
 }
 @keyframes main-heading-animation {
   0% {
@@ -92,11 +81,10 @@
   width: 100%;
   border: none;
   outline: none;
-  opacity: 0.5;
 }
 #add-button {
   border: none;
-  background: transparent;
+  background: #04aa6d;
   color: white;
   cursor: pointer;
   font-size: 1rem;
@@ -105,7 +93,7 @@
   transition-duration: 0.4s;
 }
 #add-button:hover {
-  background: #04aa6d;
+  background: #038f5c;
 }
 #add-button:focus {
   outline: none;
@@ -150,6 +138,7 @@
   display: flex;
   flex-direction: column;
   width: 50%;
+  margin-top: 1rem;
 }
 .list-div {
   position: relative;
