--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   padding: 0%;
 }
 body {
-  background: url("/image/bg.jpg") no-repeat center center/cover;
+  background: url("/image/bg.jpg") repeat center center/cover;
   color: white;
   z-index: -1;
 }
@@ -39,6 +39,7 @@ body::after {
   float: left;
   width: 100%;
   height: 1rem;
+  padding-top: 1rem;
 }
 #task-number {
   font-size: 0.8rem;
@@ -71,7 +72,7 @@ body::after {
   flex-direction: column;
   gap: 3rem;
   width: 50%;
-  margin-top: 2rem;
+  margin-top: 18vh;
 }
 .main-heading {
   display: flex;
