--- a/css/style.css
+++ b/css/style.css
@@ -6,21 +6,8 @@
   padding: 0%;
 }
 body {
-  background: url("/image/bg.jpg") repeat center center/cover;
+  background: #ffb703;
   color: white;
-  z-index: -1;
-}
-body::after {
-  /* this will serve as a black cover before the background-image so text will be highlightened */
-  /* without content it won't work so we declare an empty content */
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.1);
-  /* z-index will tell what element will be at the top and what will be behind */
   z-index: -1;
 }
 .main-container {
@@ -61,11 +48,8 @@ body::after {
   bottom: 1rem;
   border-radius: 50%;
   z-index: 3;
-  background: transparent;
+  background: #ffb703;
   color: transparent;
-}
-.clear-btn:hover {
-  background: #b60326;
 }
 .main-header-container {
   display: flex;
@@ -88,10 +72,10 @@ body::after {
     left: 0;
   }
   50% {
-    color: coral;
+    color: tomato;
   }
   100% {
-    color: #ffffff;
+    color: white;
   }
 }
 .date-time {
@@ -109,7 +93,7 @@ body::after {
 }
 #add-button {
   border: none;
-  background: #04aa6d;
+  background: #264653;
   color: white;
   cursor: pointer;
   font-size: 1rem;
@@ -118,7 +102,7 @@ body::after {
   transition-duration: 0.4s;
 }
 #add-button:hover {
-  background: #038f5c;
+  background: #075277;
 }
 #add-button:focus {
   outline: none;
@@ -150,7 +134,7 @@ body::after {
   top: 0;
   bottom: 0;
   right: 2.6rem;
-  color: #04aa6d;
+  color: #ffb703;
   cursor: pointer;
   font-size: 1.5rem;
   transition-duration: 0.4s;
@@ -169,7 +153,7 @@ body::after {
   position: relative;
   background: white;
   color: black;
-  border-left: 5px solid #17a2b8;
+  border-left: 5px solid #023047;
   margin-bottom: 0.3rem;
   padding: 1rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -185,7 +169,7 @@ ul {
 .checked-list {
   text-decoration: line-through;
   color: rgb(110, 110, 110);
-  background: rgb(187, 187, 187);
+  background: #fb8500;
   transition: all 0.5s ease;
   box-shadow: none;
   border: none;
